# myws

./: README.md  pyproject.toml
.github/workflows/: pylint.yml
docs/: index.rst  requirements.txt
test/: dummy_test.py
